// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates typings for module export-from-js 1`] = `
"declare module 'export-from-js' {
    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module export-from-jsx 1`] = `
"declare module 'export-from-jsx' {
    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;
